[package]
name = "orbimage"
description = "Orbital image features"
repository = "https://gitlab.redox-os.org/redox-os/orbimage"
version = "0.1.18"
license-file = "LICENSE"
readme = "README.md"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]

[dependencies]
orbclient = { git = "https://gitlab.redox-os.org/redox-os/orbclient.git" }
image = "0.23.9"
resize = "0.5.5"
